Fix #4. Make a uniform minimum button width, so that the two buttons look evenly sized on mobile.

--- a/css/my-styles.scss
+++ b/css/my-styles.scss
@@ -76,6 +76,8 @@ a {
     // font: normal normal bold 20px tahoma;
     color: #ffffff;
     text-decoration: none;
+    min-width: 180px;
+    margin-bottom: 5px;
 }
 .generate-button:hover,
 .generate-button:focus {
@@ -116,6 +118,8 @@ a {
     // font: normal normal bold 20px tahoma;
     color: #ffffff;
     text-decoration: none;
+    min-width: 180px;
+    margin-bottom: 5px;
 }
 .close-button:hover,
 .close-button:focus {
